--- a/project/hkzf-mobile/public/index.html
+++ b/project/hkzf-mobile/public/index.html
@@ -9,20 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- 引入百度地图API的JS文件,JS文件中包含百度地图的秘钥 -->
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=XAmIdOrtTZl14uLlDYijolVNZwVY9r7O"></script>
     <title>React 好客租房</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
