--- a/project/hkzf-mobile/public/index.html
+++ b/project/hkzf-mobile/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <!-- 引入百度地图API的JS文件,JS文件中包含百度地图的秘钥 -->
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=XAmIdOrtTZl14uLlDYijolVNZwVY9r7O"></script>
+    <script type="text/javascript" src="http://api.map.baidu.com/getscript?v=3.0&ak=XAmIdOrtTZl14uLlDYijolVNZwVY9r7O"></script>
     <title>React 好客租房</title>
   </head>
   <body>
